# video_algorithm_ncnn_qt

./: CMakeLists.txt  README.md
ColorReaderEventCPP/: CMakeLists.txt  astra_cap.cpp  astra_cap.h  key_handler.h  mian.cpp
cmake/: FindAstra.cmake  ui2header.cmake
examples/: CMakeLists.txt
examples/include/: unet.h  yolact.h  yolov5_pnnx.h  yolov5_pnnx_1.h
examples/src/: concat_img.cpp  main.cpp  unet.cpp  yolact.cpp  yolov5_pnnx.cpp  yolov5_pnnx_1.cpp
param/: unet.ncnn.param  unet.pnnx.param  unet_ncnn.py  unet_pnnx.py  yolov5s.ncnn.param  yolov5s.ncnn.param2  yolov5s.pnnx.param  yolov5s_ncnn.py  yolov5s_pnnx.py
scripts/: onnxsimplify.py
src/: main.cpp  main_widget.h  mainwindow.cpp  mainwindow.h  my_widget.cpp  my_widget.h  option.h.in
ui/: main_widget.ui
